feat: fill v2.0 content sections across all Java interview files - batch 2