@@ -248,14 +248,14 @@ Where this analogy breaks down: [TODO: 1 sentence.]
 
 ### Quick Reference Card
 
-**WHAT IT IS:** [TODO]
-**PROBLEM IT SOLVES:** [TODO]
-**KEY INSIGHT:** [TODO]
-**USE WHEN:** [TODO]
-**AVOID WHEN:** [TODO]
-**ANTI-PATTERN:** [TODO]
-**TRADE-OFF:** [TODO]
-**ONE-LINER:** [TODO]
+**WHAT IT IS:** Suite of tools for profiling, monitoring, and diagnosing JVM applications (JFR, async-profiler, jmap, jstack)
+**PROBLEM IT SOLVES:** Identifies CPU bottlenecks, memory leaks, thread deadlocks, and GC issues in production
+**KEY INSIGHT:** Use sampling profilers (async-profiler, JFR) in production - <2% overhead vs 10-50% for instrumentation
+**USE WHEN:** Performance degradation, OOM errors, thread hangs, latency spikes, capacity planning
+**AVOID WHEN:** Using instrumentation profilers in production - they skew results and impact performance
+**ANTI-PATTERN:** Profiling only in dev environment with synthetic data - production workloads are different
+**TRADE-OFF:** Diagnostic depth vs overhead and data volume. JFR is always-on; heap dump freezes the JVM
+**ONE-LINER:** "async-profiler for CPU, JFR for everything, jmap for OOM, jstack for deadlocks"
 
 **If you remember only 3 things:**
 
@@ -311,7 +311,14 @@ _Why they ask:_ Tests systematic diagnosis approach.
 
 ### Comparison Table
 
-[TODO: Include if 2+ named alternatives exist for JVM Profiling and Diagnostic Tools. Otherwise remove this section.]
+| Tool | Purpose | Overhead | Production Safe |
+|------|---------|----------|----------------|
+| JFR | Always-on event recording | <1% | Yes |
+| async-profiler | CPU/alloc/lock sampling | <2% | Yes |
+| jstack | Thread dump snapshot | Pause | Yes (brief) |
+| jmap -histo | Object histogram | Brief pause | Caution |
+| jmap -dump | Full heap dump | Full GC pause | Emergency only |
+| VisualVM | GUI profiler | 10-50% | No (dev only) |
 
 ---
 
@@ -319,60 +326,105 @@ _Why they ask:_ Tests systematic diagnosis approach.
 
 | # | Misconception | Reality |
 |---|---------------|---------|
-| 1 | [TODO] | [TODO] |
-| 2 | [TODO] | [TODO] |
-| 3 | [TODO] | [TODO] |
-| 4 | [TODO] | [TODO] |
+| 1 | Thread dumps are only for deadlocks | Thread dumps reveal: deadlocks, lock contention, thread pool saturation, blocked IO, and CPU hotspots. Take 3-5 dumps 5 seconds apart to see patterns. |
+| 2 | Heap dumps crash the application | Heap dumps cause a full GC pause (seconds to minutes for large heaps) but don't crash the JVM. Schedule during maintenance windows for production. |
+| 3 | JFR has significant overhead | JFR was designed for always-on production use with <1% overhead. It's integrated into the JVM and uses thread-local buffers to minimize contention. |
+| 4 | Profiling in dev is sufficient | Dev environments have different data sizes, connection pools, thread counts, and GC behavior. Production profiling with JFR/async-profiler is essential. |
 
 ---
 
 ### Failure Modes and Diagnosis
 
-**Failure Mode 1: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Failure Mode 1: SafePoint bias in profiling**
+**Symptom:** Profiler shows methods that are not actually hot. Real hotspots are invisible.
+**Root Cause:** Traditional JVM profilers sample only at safepoints (method exits, loop backedges). Long-running loops without safepoints are invisible.
 **Diagnostic:**
-```
-[TODO: real diagnostic command]
-```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 2: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
-**Diagnostic:**
 ```
-[TODO: real diagnostic command]
+# Compare safepoint vs async profiler results
+asprof -e cpu -d 30 -f async.html <pid>
+# Then compare with JVisualVM sampler output
+# Discrepancies = safepoint bias
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 3: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Fix:**
+```java
+// Use async-profiler instead of safepoint-biased
+// profilers. It uses OS signals (SIGPROF) to
+// sample at ANY point, not just safepoints.
+
+// Command:
+// asprof -e cpu -d 60 -f flame.html <pid>
+```
+**Prevention:** Always use async-profiler or JFR (both are safepoint-unbiased) for CPU profiling. Never use safepoint-biased profilers for production analysis.
+
+**Failure Mode 2: Heap dump triggers OOM killer**
+**Symptom:** Taking a heap dump on a large-heap JVM causes the OS OOM killer to terminate the process.
+**Root Cause:** `jmap -dump` forces a full GC + writes the entire heap to disk. If the JVM is already near OOM, the dump process itself needs memory.
 **Diagnostic:**
+
 ```
-[TODO: real diagnostic command]
+dmesg | grep -i "oom\|killed"
+# Check if OS OOM killer terminated the process
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
+
+**Fix:**
+```java
+// Enable automatic heap dump on OOM instead:
+// -XX:+HeapDumpOnOutOfMemoryError
+// -XX:HeapDumpPath=/tmp/heapdump.hprof
+
+// For live analysis without full dump:
+// jmap -histo:live <pid> | head -30
+// (only object histogram, not full dump)
+```
+**Prevention:** Enable `-XX:+HeapDumpOnOutOfMemoryError` at startup. Use `jmap -histo` for quick analysis. Reserve disk space >= heap size for dumps.
+
+**Failure Mode 3: Thread dump shows no deadlock but threads are stuck**
+**Symptom:** Application is unresponsive. Thread dump shows threads WAITING or TIMED_WAITING but no deadlock detected.
+**Root Cause:** Virtual deadlock - threads waiting on external resources (DB connections, HTTP calls, distributed locks) that jstack doesn't detect as deadlocks.
+**Diagnostic:**
+
+```
+jstack <pid> | grep -c "WAITING\|BLOCKED"
+# High count = resource exhaustion
+jstack <pid> | grep "waiting on"
+# Shows what resources threads are waiting for
+```
+
+**Fix:**
+```java
+// Identify the bottleneck resource:
+// - Connection pool: check pool size vs thread count
+// - External service: add timeouts
+// - Distributed lock: check lock holder
+
+// Always set timeouts on external calls:
+conn.setNetworkTimeout(executor, 5000);
+httpClient.newBuilder()
+    .connectTimeout(Duration.ofSeconds(5))
+    .build();
+```
+**Prevention:** Set timeouts on ALL external calls. Monitor connection pool usage. Take 3-5 thread dumps 5 seconds apart to see patterns.
 
 ---
 
 ### Related Keywords
 
 **Prerequisites (understand these first):**
-- [TODO] - [why needed]
-- [TODO] - [why needed]
+
+- JVM memory model - understanding heap, stack, and metaspace layout
+- Threading basics - thread states (RUNNABLE, WAITING, BLOCKED)
 
 **Builds on this (learn these next):**
-- [TODO] - [what it adds]
-- [TODO] - [what it adds]
+
+- GC Algorithm Selection - use profiling data to choose and tune GC
+- Observability and SRE - integrating JVM metrics into monitoring systems
 
 **Alternatives / Comparisons:**
-- [TODO] - [when to prefer it]
-- [TODO] - [when to prefer it]
+
+- OpenTelemetry - distributed tracing across services (complements JVM tools)
+- Datadog/New Relic APM - commercial tools with JVM agent instrumentation
 
 
 ---
@@ -591,14 +643,14 @@ Where this analogy breaks down: [TODO: 1 sentence.]
 
 ### Quick Reference Card
 
-**WHAT IT IS:** [TODO]
-**PROBLEM IT SOLVES:** [TODO]
-**KEY INSIGHT:** [TODO]
-**USE WHEN:** [TODO]
-**AVOID WHEN:** [TODO]
-**ANTI-PATTERN:** [TODO]
-**TRADE-OFF:** [TODO]
-**ONE-LINER:** [TODO]
+**WHAT IT IS:** Common attack patterns against Java applications: injection, deserialization, XXE, SSRF, dependency exploits
+**PROBLEM IT SOLVES:** Understanding and preventing security breaches in Java backend systems
+**KEY INSIGHT:** Every vulnerability is untrusted input crossing a trust boundary without validation
+**USE WHEN:** Code review, security audits, incident response, dependency upgrades, threat modeling
+**AVOID WHEN:** Assuming frameworks handle all security - misconfiguration is the #1 vulnerability
+**ANTI-PATTERN:** Using `ObjectInputStream` on untrusted data - arbitrary code execution via gadget chains
+**TRADE-OFF:** Security controls vs development speed and user experience friction
+**ONE-LINER:** "Never trust input, never deserialize untrusted data, always update dependencies"
 
 **If you remember only 3 things:**
 
@@ -649,7 +701,13 @@ If Java serialization is unavoidable: (1) Use `ObjectInputFilter` (Java 9+) to w
 
 ### Comparison Table
 
-[TODO: Include if 2+ named alternatives exist for Java Security Vulnerabilities. Otherwise remove this section.]
+| Vulnerability | Attack Vector | Java Impact | Prevention |
+|--------------|--------------|------------|------------|
+| SQL Injection | User input in SQL | JDBC statements | Parameterized queries |
+| Deserialization | Untrusted ObjectInputStream | RCE via gadgets | Use JSON, allowlist |
+| XXE | XML parser with DTD | File read, SSRF | Disable DTD processing |
+| Log4Shell | JNDI lookup in log message | RCE | Update Log4j, disable JNDI |
+| Dependency exploit | Transitive vulnerable lib | Varies | Scan with OWASP, Snyk |
 
 ---
 
@@ -657,60 +715,114 @@ If Java serialization is unavoidable: (1) Use `ObjectInputFilter` (Java 9+) to w
 
 | # | Misconception | Reality |
 |---|---------------|---------|
-| 1 | [TODO] | [TODO] |
-| 2 | [TODO] | [TODO] |
-| 3 | [TODO] | [TODO] |
-| 4 | [TODO] | [TODO] |
+| 1 | Using a framework prevents all vulnerabilities | Frameworks prevent common attacks when configured correctly, but misconfiguration (disabled CSRF, open CORS) is the #1 cause of framework-based vulnerabilities. |
+| 2 | SQL injection is a solved problem | Parameterized queries prevent injection, but dynamic table/column names, native queries, and string-built criteria are still vulnerable. |
+| 3 | HTTPS encrypts everything | HTTPS encrypts transport but not the data at rest, in logs, or in error messages. Sensitive data can leak through logs, stack traces, and debug endpoints. |
+| 4 | Updating dependencies is optional | Log4Shell (CVE-2021-44228) affected millions of applications through a transitive dependency. Regular dependency scanning is a critical security practice. |
 
 ---
 
 ### Failure Modes and Diagnosis
 
-**Failure Mode 1: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Failure Mode 1: SQL Injection via string concatenation**
+**Symptom:** Unauthorized data access, data modification, or database compromise.
+**Root Cause:** Building SQL queries by concatenating user input instead of using parameterized queries.
 **Diagnostic:**
-```
-[TODO: real diagnostic command]
-```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 2: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
-**Diagnostic:**
 ```
-[TODO: real diagnostic command]
+grep -rn 'Statement\|createStatement\|"SELECT.*+' src/
+# Find non-parameterized SQL construction
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 3: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Fix:**
+```java
+// BAD: SQL injection vulnerable
+String sql = "SELECT * FROM users WHERE id = '"
+    + userInput + "'";
+Statement stmt = conn.createStatement();
+stmt.executeQuery(sql);
+
+// GOOD: parameterized query
+PreparedStatement ps = conn.prepareStatement(
+    "SELECT * FROM users WHERE id = ?");
+ps.setString(1, userInput);
+ps.executeQuery();
+```
+**Prevention:** Use PreparedStatement exclusively. Enable SQL injection detection in static analysis. Use ORM frameworks with parameterized queries.
+
+**Failure Mode 2: Insecure deserialization (RCE)**
+**Symptom:** Remote Code Execution. Attacker gains shell access to the server.
+**Root Cause:** Using `ObjectInputStream.readObject()` on untrusted data. Attacker crafts serialized objects that trigger arbitrary code via gadget chains (Apache Commons Collections, Spring, etc.).
 **Diagnostic:**
+
 ```
-[TODO: real diagnostic command]
+grep -rn 'ObjectInputStream\|readObject' src/
+# Any use with untrusted data is vulnerable
+# Check for deserialization filters (JEP 290)
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
+
+**Fix:**
+```java
+// BAD: deserialize untrusted data
+ObjectInputStream ois = new ObjectInputStream(
+    request.getInputStream());
+Object obj = ois.readObject(); // RCE!
+
+// GOOD: use JSON instead
+ObjectMapper mapper = new ObjectMapper();
+MyDto dto = mapper.readValue(
+    request.getInputStream(), MyDto.class);
+// Or: add deserialization filter (JDK 9+)
+```
+**Prevention:** Never use Java serialization for untrusted input. Use JSON/protobuf. If required, use JEP 290 deserialization filters.
+
+**Failure Mode 3: XXE (XML External Entity) attack**
+**Symptom:** Server-side file disclosure (reads /etc/passwd), SSRF, or denial of service via entity expansion.
+**Root Cause:** XML parser configured to process external entities. Attacker-controlled XML references malicious DTDs.
+**Diagnostic:**
+
+```
+grep -rn 'DocumentBuilder\|SAXParser\|XMLReader' src/
+# Check if external entities are disabled
+```
+
+**Fix:**
+```java
+// BAD: default parser allows XXE
+DocumentBuilderFactory dbf =
+    DocumentBuilderFactory.newInstance();
+Document doc = dbf.newDocumentBuilder()
+    .parse(untrustedInput);
+
+// GOOD: disable external entities
+DocumentBuilderFactory dbf =
+    DocumentBuilderFactory.newInstance();
+dbf.setFeature(
+    "http://apache.org/xml/features/"
+    + "disallow-doctype-decl", true);
+dbf.setFeature(
+    XMLConstants.FEATURE_SECURE_PROCESSING, true);
+```
+**Prevention:** Disable DTD processing in all XML parsers. Use JAXB or JSON where possible.
 
 ---
 
 ### Related Keywords
 
 **Prerequisites (understand these first):**
-- [TODO] - [why needed]
-- [TODO] - [why needed]
+
+- HTTP and APIs - understanding request/response and input handling
+- Exception handling - proper error responses without information leakage
 
 **Builds on this (learn these next):**
-- [TODO] - [what it adds]
-- [TODO] - [what it adds]
+
+- Spring Security - framework-level security controls
+- OAuth2/OIDC - authentication and authorization protocols
 
 **Alternatives / Comparisons:**
-- [TODO] - [when to prefer it]
-- [TODO] - [when to prefer it]
+
+- OWASP ZAP/Burp Suite - dynamic security testing tools
+- SonarQube/Snyk - static analysis and dependency vulnerability scanning
 
 
 ---
@@ -913,14 +1025,14 @@ java -Xms16g -Xmx16g \
 
 ### Quick Reference Card
 
-**WHAT IT IS:** [TODO]
-**PROBLEM IT SOLVES:** [TODO]
-**KEY INSIGHT:** [TODO]
-**USE WHEN:** [TODO]
-**AVOID WHEN:** [TODO]
-**ANTI-PATTERN:** [TODO]
-**TRADE-OFF:** [TODO]
-**ONE-LINER:** [TODO]
+**WHAT IT IS:** Decision framework for choosing the right JVM garbage collector based on workload characteristics
+**PROBLEM IT SOLVES:** Matching GC behavior (pause time, throughput, memory) to application requirements
+**KEY INSIGHT:** G1 for balanced, ZGC for low latency, Parallel for max throughput, Shenandoah for OpenJDK ultra-low pause
+**USE WHEN:** Performance tuning, capacity planning, SLA compliance, choosing GC for new services
+**AVOID WHEN:** Over-tuning before measuring - default G1 is correct for most workloads
+**ANTI-PATTERN:** Tuning 50+ GC flags without understanding the workload - makes GC behavior fragile and non-portable
+**TRADE-OFF:** Low pause times (ZGC) vs maximum throughput (Parallel) vs balanced (G1)
+**ONE-LINER:** "Start with G1 defaults, measure, switch to ZGC for latency or Parallel for batch"
 
 **If you remember only 3 things:**
 
@@ -989,7 +1101,14 @@ java -Xms16g -Xmx16g \
 
 ### Comparison Table
 
-[TODO: Include if 2+ named alternatives exist for GC Algorithm Selection Framework. Otherwise remove this section.]
+| Aspect | G1 GC | ZGC | Parallel GC | Shenandoah |
+|--------|-------|-----|------------|------------|
+| Max pause | 200ms (target) | <1ms | Seconds | <10ms |
+| Throughput | Good | Good (JDK 21+) | Best | Good |
+| Min heap | ~4GB | ~256MB | Any | ~4GB |
+| CPU overhead | Medium | Higher | Lowest | Higher |
+| Default since | JDK 9 | No | JDK 1-8 | No |
+| Best for | General purpose | Latency-critical | Batch | OpenJDK latency |
 
 ---
 
@@ -997,58 +1116,105 @@ java -Xms16g -Xmx16g \
 
 | # | Misconception | Reality |
 |---|---------------|---------|
-| 1 | [TODO] | [TODO] |
-| 2 | [TODO] | [TODO] |
-| 3 | [TODO] | [TODO] |
-| 4 | [TODO] | [TODO] |
+| 1 | G1 is always the best choice | G1 struggles with very large heaps (>64GB) where mixed collections can exceed pause targets. ZGC handles multi-terabyte heaps with sub-ms pauses. |
+| 2 | ZGC has lower throughput than G1 | Since JDK 21, ZGC (generational mode) achieves throughput within 5% of G1 for most workloads while maintaining sub-ms pauses. |
+| 3 | More GC tuning flags means better performance | Over-tuning creates fragile configurations that break when workload changes. Start with defaults, measure, and tune only the 2-3 most impactful parameters. |
+| 4 | GC pause time = total application impact | GC impact includes: pause time + CPU stolen for concurrent work + allocation stalls + reference processing. Total GC overhead is more than pause time. |
 
 ---
 
 ### Failure Modes and Diagnosis
 
-**Failure Mode 1: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Failure Mode 1: Wrong GC for latency-sensitive service**
+**Symptom:** p99 latency spikes of 200ms-2s correlated with GC pauses. SLA violations.
+**Root Cause:** Using Parallel GC (stop-the-world for entire collection) for a latency-sensitive API service.
 **Diagnostic:**
-```
-[TODO: real diagnostic command]
-```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 2: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
-**Diagnostic:**
 ```
-[TODO: real diagnostic command]
+# Check which GC is active
+java -XX:+PrintFlagsFinal -version 2>&1 | grep UseGC
+# Check pause times
+jstat -gcutil <pid> 1000
+# GC logs: -Xlog:gc*:file=gc.log
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 3: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Fix:**
+```java
+// BAD: Parallel GC for API service
+// -XX:+UseParallelGC (default on JDK 8)
+
+// GOOD: G1 or ZGC for latency
+// -XX:+UseG1GC -XX:MaxGCPauseMillis=100
+// Or for sub-ms: -XX:+UseZGC
+```
+**Prevention:** Match GC to workload: ZGC for <10ms p99, G1 for <200ms, Parallel for batch only.
+
+**Failure Mode 2: G1 mixed collection exceeding pause target**
+**Symptom:** G1 pause times exceed `MaxGCPauseMillis` target. GC log shows long mixed collections.
+**Root Cause:** Too much old-gen data to collect in one pause. G1 tries to collect too many regions in a mixed GC.
 **Diagnostic:**
+
 ```
-[TODO: real diagnostic command]
+grep "Mixed" gc.log | awk '{print $NF}' | sort -n
+# Show distribution of mixed collection pause times
+# Tail values exceeding target = problem
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
+
+**Fix:**
+```java
+// Reduce per-cycle collection work:
+// -XX:G1MixedGCCountTarget=16 (default 8)
+// Spread old-gen cleanup over more cycles
+
+// Or: increase heap to reduce GC frequency
+// -Xmx and -Xms should match for G1
+```
+**Prevention:** Set `-Xmx = -Xms` for G1. Monitor with `-Xlog:gc*`. Consider ZGC for heaps >32GB.
+
+**Failure Mode 3: Allocation rate exceeding GC throughput**
+**Symptom:** GC runs continuously. Application throughput drops to near zero. `jstat` shows constant GC activity.
+**Root Cause:** Application allocates faster than any GC can reclaim. Young gen fills before GC completes.
+**Diagnostic:**
+
+```
+jstat -gcutil <pid> 1000
+# If S0/S1/E columns are always near 100%
+# and GC time is >50% = allocation pressure
+
+asprof -e alloc -d 30 -f alloc.html <pid>
+# Shows which code paths allocate most
+```
+
+**Fix:**
+```java
+// 1. Profile allocations and reduce:
+// - Reuse objects (StringBuilder, byte[])
+// - Use primitives instead of wrappers
+// - Cache computed values
+
+// 2. Increase young gen size:
+// -XX:NewRatio=2 or -Xmn for explicit sizing
+
+// 3. If heap is full, increase -Xmx
+```
+**Prevention:** Profile allocation rate with async-profiler. Set allocation rate alerts. Size young gen to survive between GC cycles.
 
 ---
 
 ### Related Keywords
 
 **Prerequisites (understand these first):**
-- [TODO] - [why needed]
-- [TODO] - [why needed]
+
+- JVM Memory Model - understanding heap generations and object lifecycle
+- JVM Profiling Tools - how to measure GC behavior and impact
 
 **Builds on this (learn these next):**
-- [TODO] - [what it adds]
-- [TODO] - [what it adds]
+
+- GC Tuning - advanced flag tuning for specific workloads
+- JFR GC analysis - using Flight Recorder to diagnose GC issues
 
 **Alternatives / Comparisons:**
-- [TODO] - [when to prefer it]
-- [TODO] - [when to prefer it]
+
+- Manual memory management (Rust, C++) - no GC overhead but developer burden
+- Off-heap storage (Chronicle, Memcached) - bypass GC for large data sets
 
