@@ -167,9 +167,12 @@ Detect pinning with: `-Djdk.tracePinnedThreads=full`
 
 
 **Level 5 - Distinguished (expert thinking):**
-[TODO: Cross-domain pattern recognition. Expert heuristics.
- What would you change if redesigning today?
- How does this compose at extreme scale?]
+Virtual threads are the JVM's implementation of the universal lightweight concurrency primitive that exists in every modern runtime: Go goroutines, Kotlin coroutines, Erlang processes, Rust tokio tasks. The cross-domain insight: all of these solve the same problem - OS threads are too expensive (1MB stack, kernel scheduling overhead) to model one-thread-per-request at scale. Virtual threads solve this by decoupling the Java thread (the programming model) from the OS thread (the execution resource). A virtual thread is mounted on a carrier (platform) thread only while it has CPU work; during blocking IO, it unmounts, freeing the carrier for other virtual threads. At extreme scale (millions of concurrent connections), virtual threads eliminate the need for reactive programming (Project Reactor, RxJava) for IO-bound workloads while keeping the simple thread-per-request model. If redesigning today, virtual threads would be the ONLY thread type, and platform threads would be an implementation detail never exposed to developers.
+
+**Expert thinking cues:**
+- "Is this IO-bound or CPU-bound?" - virtual threads help IO-bound; CPU-bound needs platform threads
+- "Are we pinning?" - synchronized blocks and native calls pin virtual threads to carriers
+- "Is thread-per-request viable now?" - with virtual threads, yes - even at millions of requests
 
 ---
 
@@ -266,14 +269,14 @@ try (var executor = Executors
 
 ### Quick Reference Card
 
-**WHAT IT IS:** [TODO]
-**PROBLEM IT SOLVES:** [TODO]
-**KEY INSIGHT:** [TODO]
-**USE WHEN:** [TODO]
-**AVOID WHEN:** [TODO]
-**ANTI-PATTERN:** [TODO]
-**TRADE-OFF:** [TODO]
-**ONE-LINER:** [TODO]
+**WHAT IT IS:** Lightweight threads managed by the JVM (not OS), enabling millions of concurrent threads for IO-bound workloads (JDK 21)
+**PROBLEM IT SOLVES:** OS thread limits (~10K) force complex async/reactive code for high-concurrency IO workloads
+**KEY INSIGHT:** Virtual threads decouple the Java thread (programming model) from the OS thread (execution resource)
+**USE WHEN:** IO-bound workloads (HTTP servers, DB queries, microservice calls) needing high concurrency with simple code
+**AVOID WHEN:** CPU-bound computation (use platform thread pools), or when using synchronized blocks extensively (pinning)
+**ANTI-PATTERN:** Pooling virtual threads - they are cheap to create and should be one-per-task, never pooled
+**TRADE-OFF:** Simplicity (thread-per-request) vs control (reactive gives more backpressure control)
+**ONE-LINER:** "Virtual threads make thread-per-request viable at million-connection scale with blocking code"
 
 **If you remember only 3 things:**
 
@@ -391,7 +394,14 @@ In large codebases, use jdeprscan or custom tooling to find all `synchronized` b
 
 ### Comparison Table
 
-[TODO: Include if 2+ named alternatives exist for Virtual Threads. Otherwise remove this section.]
+| Aspect | Virtual Threads | Platform Threads | Reactive (Reactor) |
+|--------|----------------|-----------------|-------------------|
+| Stack size | ~1KB (grows) | ~1MB fixed | N/A (callback) |
+| Max count | Millions | ~10K | N/A (event loop) |
+| Blocking IO | Unmounts carrier | Blocks OS thread | Non-blocking |
+| Code style | Imperative/blocking | Imperative/blocking | Reactive/functional |
+| Debugging | Standard stack traces | Standard stack traces | Complex (async) |
+| Best for | IO-bound, high concurrency | CPU-bound | IO-bound, backpressure |
 
 ---
 
@@ -399,60 +409,127 @@ In large codebases, use jdeprscan or custom tooling to find all `synchronized` b
 
 | # | Misconception | Reality |
 |---|---------------|---------|
-| 1 | [TODO] | [TODO] |
-| 2 | [TODO] | [TODO] |
-| 3 | [TODO] | [TODO] |
-| 4 | [TODO] | [TODO] |
+| 1 | Virtual threads are faster than platform threads | Virtual threads are not faster per-task. They are more scalable - you can have millions of them. A single virtual thread runs at the same speed as a platform thread. |
+| 2 | Virtual threads replace reactive programming entirely | For IO-bound workloads, yes. But reactive frameworks still provide backpressure, which virtual threads don't. CPU-bound work still needs bounded thread pools. |
+| 3 | Virtual threads should be pooled | Never pool virtual threads. They are cheap to create (~1KB) and meant to be one-per-task. Pooling adds complexity without benefit. |
+| 4 | synchronized works fine with virtual threads | synchronized blocks PIN virtual threads to carrier threads, blocking the carrier. Replace synchronized with ReentrantLock to allow unmounting during contention. |
 
 ---
 
 ### Failure Modes and Diagnosis
 
-**Failure Mode 1: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Failure Mode 1: Thread pinning due to synchronized blocks**
+**Symptom:** Virtual thread pool carriers are all blocked. Throughput drops to number of carrier threads. Thread dump shows virtual threads stuck in synchronized.
+**Root Cause:** `synchronized` blocks pin virtual threads to carrier (platform) threads. The carrier cannot be reused until the synchronized block exits, even during IO waits inside it.
 **Diagnostic:**
-```
-[TODO: real diagnostic command]
-```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 2: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
-**Diagnostic:**
 ```
-[TODO: real diagnostic command]
+# JDK 21+: detect pinning with JFR events
+# -Djdk.tracePinnedThreads=short (or =full)
+# Look for jdk.VirtualThreadPinned events in JFR
+jcmd <pid> JFR.start name=pin duration=60s
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 3: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Fix:**
+```java
+// BAD: synchronized pins virtual thread
+synchronized (lock) {
+    var result = httpClient.send(req, handler);
+    // Carrier is pinned during entire HTTP call
+}
+
+// GOOD: use ReentrantLock instead
+private final ReentrantLock lock = new ReentrantLock();
+lock.lock();
+try {
+    var result = httpClient.send(req, handler);
+    // Virtual thread can unmount during IO
+} finally {
+    lock.unlock();
+}
+```
+**Prevention:** Replace all `synchronized` with `ReentrantLock` in code that runs on virtual threads. Use `-Djdk.tracePinnedThreads=short` to detect pinning.
+
+**Failure Mode 2: Memory exhaustion from millions of virtual threads**
+**Symptom:** OutOfMemoryError. Each virtual thread holds request state, accumulated objects fill heap.
+**Root Cause:** Creating millions of virtual threads, each holding significant state (large request bodies, database result sets). Virtual threads are cheap but their stack/state is not free.
 **Diagnostic:**
+
 ```
-[TODO: real diagnostic command]
+# Count active virtual threads
+jcmd <pid> Thread.dump_to_file -format=json threads.json
+# Check heap usage per thread
+jmap -histo:live <pid> | head -20
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
+
+**Fix:**
+```java
+// BAD: unlimited virtual threads with large state
+try (var exec = Executors.newVirtualThreadPerTaskExecutor()) {
+    for (var req : millionsOfRequests) {
+        exec.submit(() -> processLargePayload(req));
+    }
+}
+
+// GOOD: use semaphore to bound concurrency
+Semaphore permits = new Semaphore(10_000);
+try (var exec = Executors.newVirtualThreadPerTaskExecutor()) {
+    for (var req : millionsOfRequests) {
+        permits.acquire();
+        exec.submit(() -> {
+            try { processLargePayload(req); }
+            finally { permits.release(); }
+        });
+    }
+}
+```
+**Prevention:** Bound concurrency with Semaphore when memory per task is significant. Monitor heap usage. Virtual threads are cheap but not free.
+
+**Failure Mode 3: ThreadLocal memory leaks at scale**
+**Symptom:** Heap grows linearly with virtual thread count. GC can't reclaim ThreadLocal-attached objects.
+**Root Cause:** Each virtual thread gets its own ThreadLocal copies. With millions of virtual threads, ThreadLocal storage becomes a significant memory consumer.
+**Diagnostic:**
+
+```
+# Heap dump analysis
+jmap -dump:live,format=b,file=heap.hprof <pid>
+# In Eclipse MAT: find ThreadLocal instances
+# Look for ThreadLocal$ThreadLocalMap entries
+```
+
+**Fix:**
+```java
+// BAD: ThreadLocal with virtual threads
+private static final ThreadLocal<ExpensiveObj> cache =
+    ThreadLocal.withInitial(ExpensiveObj::new);
+// Millions of virtual threads = millions of objects
+
+// GOOD: use ScopedValue or shared cache
+private static final ScopedValue<RequestCtx> CTX =
+    ScopedValue.newInstance();
+ScopedValue.where(CTX, new RequestCtx(userId))
+    .run(() -> handleRequest());
+```
+**Prevention:** Replace ThreadLocal with ScopedValue for virtual threads. Audit all ThreadLocal usage before migrating to virtual threads.
 
 ---
 
 ### Related Keywords
 
 **Prerequisites (understand these first):**
-- [TODO] - [why needed]
-- [TODO] - [why needed]
+
+- Java threading and concurrency - Thread, Runnable, ExecutorService, thread pools
+- Blocking IO vs non-blocking IO - understanding why blocking wastes OS threads
 
 **Builds on this (learn these next):**
-- [TODO] - [what it adds]
-- [TODO] - [what it adds]
+
+- Structured Concurrency - managing virtual thread lifetimes with StructuredTaskScope
+- Scoped Values - replacing ThreadLocal for virtual thread-safe context propagation
 
 **Alternatives / Comparisons:**
-- [TODO] - [when to prefer it]
-- [TODO] - [when to prefer it]
+
+- Project Reactor / RxJava - reactive streams for IO-bound work with backpressure (more complex)
+- Kotlin Coroutines - similar lightweight concurrency with suspend functions (Kotlin-specific)
 
 
 ---
@@ -595,9 +672,12 @@ This is fundamentally better than InheritableThreadLocal, which copies the value
 
 
 **Level 5 - Distinguished (expert thinking):**
-[TODO: Cross-domain pattern recognition. Expert heuristics.
- What would you change if redesigning today?
- How does this compose at extreme scale?]
+Scoped values are the successor to ThreadLocal that solves its fundamental design flaws: unbounded lifetime, memory leaks, and incompatibility with virtual threads. The same scoped-context pattern appears in Go's `context.Context`, Rust's task-local storage, and React's Context API. The cross-domain insight: when you need to pass contextual data (user identity, correlation ID, transaction context) through a deep call stack without parameter threading, you need a scope-bound, immutable, inheritable container. ThreadLocal's mutability and unbounded lifetime make it a memory leak factory in virtual thread scenarios (millions of threads = millions of ThreadLocal copies). Scoped values fix this by being immutable, bound to a structured scope (runs only within a `where().run()` block), and automatically cleaned up when the scope exits. If redesigning today, scoped values would be the only mechanism for thread-contextual data, and ThreadLocal would not exist.
+
+**Expert thinking cues:**
+- "Is this data per-request or per-thread?" - scoped values model per-scope, which aligns with per-request
+- "Is this mutable?" - if yes, scoped values won't work; rethink the design
+- "How many threads will exist?" - if millions (virtual threads), ThreadLocal is a memory bomb
 
 ---
 
@@ -657,14 +737,14 @@ void handle(Request req) {
 
 ### Quick Reference Card
 
-**WHAT IT IS:** [TODO]
-**PROBLEM IT SOLVES:** [TODO]
-**KEY INSIGHT:** [TODO]
-**USE WHEN:** [TODO]
-**AVOID WHEN:** [TODO]
-**ANTI-PATTERN:** [TODO]
-**TRADE-OFF:** [TODO]
-**ONE-LINER:** [TODO]
+**WHAT IT IS:** Immutable, scope-bound context values that replace ThreadLocal for passing data through call stacks (JDK 21 preview)
+**PROBLEM IT SOLVES:** ThreadLocal memory leaks and unbounded lifetime in virtual thread scenarios with millions of threads
+**KEY INSIGHT:** Scoped values are immutable, bound to a structured scope, and automatically cleaned up - unlike ThreadLocal
+**USE WHEN:** Passing request context (user ID, correlation ID, transaction) through deep call stacks without parameters
+**AVOID WHEN:** Mutable per-thread state is needed (scoped values are immutable), or on JDK versions before 21
+**ANTI-PATTERN:** Using ThreadLocal with virtual threads - millions of threads create millions of ThreadLocal copies
+**TRADE-OFF:** Immutability constraint vs memory safety and predictable lifecycle
+**ONE-LINER:** "Scoped values are ThreadLocal done right: immutable, scoped, and safe for virtual threads"
 
 **If you remember only 3 things:**
 
@@ -732,7 +812,14 @@ ScopedValue is faster than ThreadLocal for reads. ThreadLocal uses a hash map pe
 
 ### Comparison Table
 
-[TODO: Include if 2+ named alternatives exist for Scoped Values. Otherwise remove this section.]
+| Aspect | ScopedValue | ThreadLocal | Parameter passing |
+|--------|------------|-------------|------------------|
+| Mutability | Immutable | Mutable | Immutable (by convention) |
+| Lifetime | Scope-bound | Unbounded | Call stack |
+| Cleanup | Automatic | Manual (remove()) | Automatic |
+| Inheritance | StructuredTaskScope | InheritableThreadLocal | Explicit |
+| Virtual thread safe | Yes | No (memory leak) | Yes |
+| Performance | Optimized | Hash lookup | Zero overhead |
 
 ---
 
@@ -740,60 +827,121 @@ ScopedValue is faster than ThreadLocal for reads. ThreadLocal uses a hash map pe
 
 | # | Misconception | Reality |
 |---|---------------|---------|
-| 1 | [TODO] | [TODO] |
-| 2 | [TODO] | [TODO] |
-| 3 | [TODO] | [TODO] |
-| 4 | [TODO] | [TODO] |
+| 1 | Scoped values are just immutable ThreadLocals | Scoped values have fundamentally different semantics: scope-bound lifetime (auto-cleanup), no set() method, and optimized for virtual threads. They're a new abstraction, not a ThreadLocal variant. |
+| 2 | Scoped values can replace all ThreadLocal uses | Scoped values are immutable within a scope. If you need mutable per-thread state (counters, buffers), ThreadLocal is still necessary. |
+| 3 | Scoped values are only for virtual threads | Scoped values work with both platform and virtual threads. They are beneficial for any code that needs scoped context, regardless of thread type. |
+| 4 | Scoped values have high overhead | Scoped values are optimized by the JVM to be faster than ThreadLocal for read-heavy patterns. The immutability enables caching optimizations. |
 
 ---
 
 ### Failure Modes and Diagnosis
 
-**Failure Mode 1: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Failure Mode 1: Accessing scoped value outside its scope**
+**Symptom:** `NoSuchElementException` when calling `scopedValue.get()` outside a `where().run()` block.
+**Root Cause:** Scoped values are only bound within their scope. Accessing them from a thread or code path not within the `where().run()` scope throws an exception.
 **Diagnostic:**
-```
-[TODO: real diagnostic command]
-```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 2: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
-**Diagnostic:**
 ```
-[TODO: real diagnostic command]
+# Look for ScopedValue.get() calls
+grep -rn "\.get()" src/ | grep -i scoped
+# Ensure every get() is within a where().run() scope
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 3: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Fix:**
+```java
+// BAD: accessing outside scope
+static final ScopedValue<String> USER =
+    ScopedValue.newInstance();
+void process() {
+    String u = USER.get(); // NoSuchElementException!
+}
+
+// GOOD: always access within scope
+ScopedValue.where(USER, "alice").run(() -> {
+    process(); // USER.get() works here
+});
+// Or check: if (USER.isBound()) { USER.get(); }
+```
+**Prevention:** Always check `isBound()` before `get()` in code that might run outside a scope. Design APIs to require scoped context.
+
+**Failure Mode 2: Trying to mutate a scoped value**
+**Symptom:** Compilation error or design confusion when trying to change a scoped value within its scope.
+**Root Cause:** Scoped values are immutable within a scope. There is no `set()` method. To change the value, you must create a new nested scope.
 **Diagnostic:**
+
 ```
-[TODO: real diagnostic command]
+# Look for attempts to reassign scoped values
+grep -rn "ScopedValue" src/ | grep "set\|assign\|="
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
+
+**Fix:**
+```java
+// BAD: trying to mutate scoped value
+static final ScopedValue<String> ROLE =
+    ScopedValue.newInstance();
+ScopedValue.where(ROLE, "user").run(() -> {
+    // ROLE.set("admin"); // No set() method!
+    
+    // GOOD: create a nested scope
+    ScopedValue.where(ROLE, "admin").run(() -> {
+        // ROLE.get() returns "admin" here
+    });
+    // ROLE.get() returns "user" here
+});
+```
+**Prevention:** Design for immutability. If value needs to change, use nested scopes. If mutable state is required, scoped values are not the right tool.
+
+**Failure Mode 3: ScopedValue not inherited by child threads**
+**Symptom:** Child threads spawned with `Thread.start()` cannot access parent's scoped values. `NoSuchElementException` in child.
+**Root Cause:** Scoped values are only inherited through `StructuredTaskScope`. Raw `Thread.start()` creates unstructured threads that don't inherit scoped values.
+**Diagnostic:**
+
+```
+# Find thread creation inside scoped value scopes
+grep -rn "Thread(" src/ | grep -v "test"
+# These won't inherit scoped values
+```
+
+**Fix:**
+```java
+// BAD: raw thread doesn't inherit scoped values
+ScopedValue.where(USER, "alice").run(() -> {
+    new Thread(() -> {
+        USER.get(); // NoSuchElementException!
+    }).start();
+});
+
+// GOOD: use StructuredTaskScope for inheritance
+ScopedValue.where(USER, "alice").run(() -> {
+    try (var scope = new StructuredTaskScope<>()) {
+        scope.fork(() -> {
+            USER.get(); // Works! Inherited via scope
+            return null;
+        });
+        scope.join();
+    }
+});
+```
+**Prevention:** Always use StructuredTaskScope to spawn child tasks when scoped values need to be inherited. Never use raw Thread creation.
 
 ---
 
 ### Related Keywords
 
 **Prerequisites (understand these first):**
-- [TODO] - [why needed]
-- [TODO] - [why needed]
+
+- ThreadLocal - understanding per-thread storage, its API, and its memory leak problems
+- Virtual Threads - why ThreadLocal is problematic at million-thread scale
 
 **Builds on this (learn these next):**
-- [TODO] - [what it adds]
-- [TODO] - [what it adds]
+
+- Structured Concurrency - scoped values inherit through StructuredTaskScope, not raw threads
+- Context propagation - how scoped values replace MDC, SecurityContext in frameworks
 
 **Alternatives / Comparisons:**
-- [TODO] - [when to prefer it]
-- [TODO] - [when to prefer it]
+
+- ThreadLocal - mutable, unbounded lifetime, works everywhere but leaks with virtual threads
+- Parameter passing - explicit, refactor-friendly, but verbose in deep call stacks
 
 
 ---
@@ -949,9 +1097,12 @@ The observability benefit is significant: thread dumps show the task hierarchy (
 
 
 **Level 5 - Distinguished (expert thinking):**
-[TODO: Cross-domain pattern recognition. Expert heuristics.
- What would you change if redesigning today?
- How does this compose at extreme scale?]
+Structured concurrency applies the structured programming principle (every block has one entry, one exit) to concurrent tasks. Just as structured programming replaced goto with blocks, structured concurrency replaces fire-and-forget threads with scoped task groups. This same pattern appears in Kotlin's coroutineScope, Swift's TaskGroup, Python's trio nurseries, and Go's errgroup. The cross-domain insight: unstructured concurrency (raw thread creation) is the concurrent equivalent of goto - it creates invisible control flow paths that leak resources, orphan tasks, and make error handling impossible. Structured concurrency guarantees: if a scope exits, all child tasks have completed (or been cancelled). This makes concurrent code as predictable as sequential code. At extreme scale, structured concurrency composes with virtual threads and scoped values to form a complete concurrency model: lightweight threads (virtual), scoped context (scoped values), and lifetime management (structured concurrency). If redesigning today, `Thread.start()` would not exist - only structured task submission.
+
+**Expert thinking cues:**
+- "What happens to child tasks when the parent fails?" - structured concurrency guarantees cancellation
+- "Can tasks outlive their scope?" - structured = no, unstructured = yes (and that's the bug)
+- "How do I compose concurrent operations?" - StructuredTaskScope is the composition primitive
 
 ---
 
@@ -1012,14 +1163,14 @@ try (var scope = new StructuredTaskScope
 
 ### Quick Reference Card
 
-**WHAT IT IS:** [TODO]
-**PROBLEM IT SOLVES:** [TODO]
-**KEY INSIGHT:** [TODO]
-**USE WHEN:** [TODO]
-**AVOID WHEN:** [TODO]
-**ANTI-PATTERN:** [TODO]
-**TRADE-OFF:** [TODO]
-**ONE-LINER:** [TODO]
+**WHAT IT IS:** API for managing concurrent subtasks as a unit with guaranteed lifetime and cancellation semantics (JDK 21 preview)
+**PROBLEM IT SOLVES:** Fire-and-forget threads leak resources, orphan tasks, and make error handling in concurrent code impossible
+**KEY INSIGHT:** If a scope exits, ALL child tasks have completed or been cancelled - concurrent code becomes as predictable as sequential
+**USE WHEN:** Fan-out/fan-in patterns, parallel API calls, any concurrent work that should have a bounded lifetime
+**AVOID WHEN:** Truly independent background tasks that should outlive the request, or fire-and-forget scenarios
+**ANTI-PATTERN:** Using raw Thread.start() or ExecutorService.submit() without lifetime management - tasks can leak
+**TRADE-OFF:** Strict lifetime control vs flexibility of unstructured fire-and-forget concurrency
+**ONE-LINER:** "Structured concurrency is to threads what structured programming was to goto"
 
 **If you remember only 3 things:**
 
@@ -1087,7 +1238,14 @@ Structured concurrency makes thread dumps useful again. With unstructured concur
 
 ### Comparison Table
 
-[TODO: Include if 2+ named alternatives exist for Structured Concurrency. Otherwise remove this section.]
+| Aspect | StructuredTaskScope | ExecutorService | CompletableFuture |
+|--------|-------------------|----------------|------------------|
+| Lifetime | Scope-bound | Unbounded | Unbounded |
+| Cancellation | Automatic on failure | Manual | Manual |
+| Error handling | ShutdownOnFailure | try-catch per task | exceptionally() |
+| Task leaks | Impossible | Common | Common |
+| Debugging | Clear parent-child | Disconnected | Disconnected |
+| Virtual thread aware | Yes | Partially | No |
 
 ---
 
@@ -1095,60 +1253,127 @@ Structured concurrency makes thread dumps useful again. With unstructured concur
 
 | # | Misconception | Reality |
 |---|---------------|---------|
-| 1 | [TODO] | [TODO] |
-| 2 | [TODO] | [TODO] |
-| 3 | [TODO] | [TODO] |
-| 4 | [TODO] | [TODO] |
+| 1 | Structured concurrency is just a try-with-resources for threads | It's deeper: structured concurrency guarantees that ALL subtasks complete before the scope exits, propagates cancellation to children, and creates a parent-child relationship visible in debugging. |
+| 2 | Structured concurrency prevents all task leaks | Within a StructuredTaskScope, yes. But code can still create unstructured threads outside the scope. Discipline is needed to use structured concurrency consistently. |
+| 3 | Structured concurrency is only for fan-out patterns | It applies to any concurrent work with bounded lifetime: parallel API calls, concurrent validation, map-reduce, timeout handling, and competitive execution (first-to-complete). |
+| 4 | You need structured concurrency for simple parallelism | For embarrassingly parallel, independent tasks with no error correlation, a simple parallel stream or ExecutorService may be simpler. Structured concurrency shines when tasks are related. |
 
 ---
 
 ### Failure Modes and Diagnosis
 
-**Failure Mode 1: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Failure Mode 1: Forgetting to call join() before processing results**
+**Symptom:** `IllegalStateException` when calling `subtask.get()` or scope methods before `join()` completes.
+**Root Cause:** StructuredTaskScope requires `join()` to be called before accessing results. This ensures all subtasks have completed.
 **Diagnostic:**
-```
-[TODO: real diagnostic command]
-```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 2: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
-**Diagnostic:**
 ```
-[TODO: real diagnostic command]
+# Look for result access before join()
+grep -rn "subtask.get\|scope.result" src/
+# Ensure join() is called before any result access
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
 
-**Failure Mode 3: [TODO]**
-**Symptom:** [TODO]
-**Root Cause:** [TODO]
+**Fix:**
+```java
+// BAD: accessing result before join
+try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
+    var task = scope.fork(() -> fetchData());
+    String data = task.get(); // IllegalStateException!
+    scope.join();
+}
+
+// GOOD: join first, then access results
+try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
+    var task = scope.fork(() -> fetchData());
+    scope.join();
+    scope.throwIfFailed();
+    String data = task.get(); // Safe after join
+}
+```
+**Prevention:** Always follow the pattern: fork -> join -> throwIfFailed -> get results. Never access subtask results before join.
+
+**Failure Mode 2: Task leak when not using try-with-resources**
+**Symptom:** Subtasks continue running after the logical scope has ended. Resource leaks, orphaned operations.
+**Root Cause:** StructuredTaskScope implements AutoCloseable. Without try-with-resources, close() is not called, and subtasks may not be cancelled on scope exit.
 **Diagnostic:**
+
 ```
-[TODO: real diagnostic command]
+# Find scope creation without try-with-resources
+grep -rn "StructuredTaskScope" src/ | grep -v "try"
+# These are potential task leak sites
 ```
-**Fix:** [TODO: BAD then GOOD]
-**Prevention:** [TODO]
+
+**Fix:**
+```java
+// BAD: manual scope management, easy to leak
+var scope = new StructuredTaskScope.ShutdownOnFailure();
+scope.fork(() -> riskyOperation());
+// If exception thrown here, scope never closed!
+scope.join();
+scope.close();
+
+// GOOD: try-with-resources guarantees cleanup
+try (var scope = new StructuredTaskScope
+        .ShutdownOnFailure()) {
+    scope.fork(() -> riskyOperation());
+    scope.join();
+    scope.throwIfFailed();
+} // Automatically cancels and closes
+```
+**Prevention:** ALWAYS use try-with-resources with StructuredTaskScope. Never manually manage scope lifecycle.
+
+**Failure Mode 3: Using ShutdownOnSuccess when all results are needed**
+**Symptom:** Some subtasks are cancelled before completing. Missing results from cancelled tasks.
+**Root Cause:** `ShutdownOnSuccess` cancels remaining subtasks when the FIRST one succeeds. If you need ALL results, this policy is wrong.
+**Diagnostic:**
+
+```
+grep -rn "ShutdownOnSuccess" src/
+# Verify that only one result is actually needed
+# If all results needed, use ShutdownOnFailure
+```
+
+**Fix:**
+```java
+// BAD: ShutdownOnSuccess when all needed
+try (var scope = new StructuredTaskScope
+        .ShutdownOnSuccess<String>()) {
+    var t1 = scope.fork(() -> fetchFromDB());
+    var t2 = scope.fork(() -> fetchFromAPI());
+    scope.join();
+    // t2 might be cancelled if t1 finished first!
+}
+
+// GOOD: ShutdownOnFailure to wait for ALL
+try (var scope = new StructuredTaskScope
+        .ShutdownOnFailure()) {
+    var t1 = scope.fork(() -> fetchFromDB());
+    var t2 = scope.fork(() -> fetchFromAPI());
+    scope.join();
+    scope.throwIfFailed();
+    combine(t1.get(), t2.get()); // Both available
+}
+```
+**Prevention:** Use `ShutdownOnFailure` when you need ALL results. Use `ShutdownOnSuccess` only for competitive execution (first-to-complete wins).
 
 ---
 
 ### Related Keywords
 
 **Prerequisites (understand these first):**
-- [TODO] - [why needed]
-- [TODO] - [why needed]
+
+- Virtual Threads - the lightweight thread primitive that structured concurrency manages
+- CompletableFuture / ExecutorService - the unstructured concurrency APIs that this replaces
 
 **Builds on this (learn these next):**
-- [TODO] - [what it adds]
-- [TODO] - [what it adds]
+
+- Scoped Values - context propagation through structured task scopes
+- Error handling in concurrent systems - how structured concurrency simplifies error aggregation
 
 **Alternatives / Comparisons:**
-- [TODO] - [when to prefer it]
-- [TODO] - [when to prefer it]
+
+- ExecutorService + Future - unstructured, more flexible but prone to task leaks
+- CompletableFuture chains - functional composition but complex error handling and debugging
 
 
 ---
